# R3BRoot

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .travis.yml  .zenodo.json  AAAAH_WHAT_ARE_YOU_DOING_THIS_IS_THE_WRONG_BRANCH.txt  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  COPYRIGHT  CTestConfig.cmake  CTestCustom.cmake  Dart.sh  R3BRoot_test.cmake  README.md  build.py  build_thisr3broot.sh  check-format.sh  clangformat_all.sh  codemeta.json  codemeta_update.py  conanfile.txt  python_environment.yml  travis-clang-format-check.sh  travis-generate-dockerfile-buildonly.sh  travis-generate-dockerfile-sofia.sh  travis-generate-dockerfile.sh
alpide/: AlpideLinkDef.h  CMakeLists.txt  README.md
atima/: AtimaLinkDef.h  CMakeLists.txt  R3BAtima.cxx  R3BAtima.h  R3BAtimaCache.cxx  R3BAtimaCache.h  README.md
atof/: ATofLinkDef.h  CMakeLists.txt  R3BATof.cxx  R3BATof.h  R3BATofContFact.cxx  R3BATofContFact.h  R3BDetPlain.cxx  R3BDetPlain.h  R3BGeoATof.cxx  R3BGeoATof.h  R3BGeoATofPar.cxx  R3BGeoATofPar.h
cal/: CMakeLists.txt  CaloLinkDef.h  R3BCalo.cxx  R3BCalo.h  R3BCaloContFact.cxx  R3BCaloContFact.h  R3BCaloGeometry.cxx  R3BCaloGeometry.h  R3BCaloHitFinder.cxx  R3BCaloHitFinder.h  R3BCaloHitFinderPar.cxx  R3BCaloHitFinderPar.h  R3BGeoCalo.cxx  R3BGeoCalo.h  R3BGeoCaloPar.cxx  R3BGeoCaloPar.h  calo.list  test.c
califa/: CMakeLists.txt  CalifaLinkDef.h  R3BCalifa.cxx  R3BCalifa.h  R3BCalifaContFact.cxx  R3BCalifaContFact.h  R3BCalifaCrystalCal2Hit.cxx  R3BCalifaCrystalCal2Hit.h  R3BCalifaDigitizer.cxx  R3BCalifaDigitizer.h  R3BCalifaGeometry.cxx  R3BCalifaGeometry.h  R3BCalifaHitPar.cxx  R3BCalifaHitPar.h  R3BCalifaMappingPar.cxx  R3BCalifaMappingPar.h  R3BCalifaOnlineSpectra.cxx  R3BCalifaOnlineSpectra.h  README.md  ROOT_template_hacks.h  readme.txt
chimera/: CMakeLists.txt  ChimeraLinkDef.h  R3BChimera.cxx  R3BChimera.h  R3BChimeraContFact.cxx  R3BChimeraContFact.h  R3BGeoChimera.cxx  R3BGeoChimera.h  R3BGeoChimeraPar.cxx  R3BGeoChimeraPar.h
cmake/: CMakeLists.txt
evtvis/: CMakeLists.txt  R3BCalifaClusterEventDisplay.cxx  R3BCalifaClusterEventDisplay.h  R3BCalifaEventDisplay.cxx  R3BCalifaEventDisplay.h  R3BCalifaHitEventDisplay.cxx  R3BCalifaHitEventDisplay.h  R3BCaloEventDisplay.cxx  R3BCaloEventDisplay.h  R3BCaloHitEventDisplay.cxx  R3BCaloHitEventDisplay.h  R3BEventDisplayLinkDef.h  R3BEventManager.cxx  R3BEventManager.h  R3BEventManagerEditor.cxx  R3BEventManagerEditor.h  R3BIonName.cxx  R3BIonName.h  R3BMCTracks.cxx  R3BMCTracks.h
fibers/: CMakeLists.txt
field/: CMakeLists.txt  FieldLinkDef.h  R3BAladinFieldMap.cxx  R3BAladinFieldMap.h  R3BFieldConst.cxx  R3BFieldConst.h  R3BFieldContFact.cxx  R3BFieldContFact.h  R3BFieldCreator.cxx  R3BFieldCreator.h  R3BFieldInterp.cxx  R3BFieldInterp.h  R3BFieldMap.cxx  R3BFieldMap.h  R3BFieldMapData.cxx  R3BFieldMapData.h  R3BFieldPar.cxx  R3BFieldPar.h  R3BGladFieldMap.cxx  R3BGladFieldMap.h
gfi/: CMakeLists.txt  GfiLinkDef.h  R3BGeoGfi.cxx  R3BGeoGfi.h  R3BGeoGfiPar.cxx  R3BGeoGfiPar.h  R3BGfi.cxx  R3BGfi.h  R3BGfiContFact.cxx  R3BGfiContFact.h  R3BGfiDigiPar.cxx  R3BGfiDigiPar.h  R3BGfiDigitizer.cxx  R3BGfiDigitizer.h
land/: CMakeLists.txt  LandLinkDef.h  R3BConstantFraction.cxx  R3BConstantFraction.h  R3BGeoLand.cxx  R3BGeoLand.h  R3BGeoLandPar.cxx  R3BGeoLandPar.h  R3BLand.cxx  R3BLand.h  R3BLandContFact.cxx  R3BLandContFact.h  R3BLandData.cxx  R3BLandData.h  R3BLandDigiAnalyser.cxx  R3BLandDigiAnalyser.h  R3BLandDigiPar.cxx  R3BLandDigiPar.h  R3BLandDigitizer.cxx  R3BLandDigitizer.h  R3BLandDigitizerQA.cxx  R3BLandDigitizerQA.h  R3BLandDigitizer_CFD.cxx  R3BLandDigitizer_CFD.h  R3BNeuLand.cxx  R3BNeuLand.h  R3BNeuLandCluster.cxx  R3BNeuLandCluster.h  R3BNeuLandClusterFinder.cxx  R3BNeuLandClusterFinder.h  R3BNeuLandDigitizer.cxx  R3BNeuLandDigitizer.h  R3BNeuLandv1.cxx  R3BNeuLandv1.h  R3BNeutHit.cxx  R3BNeutHit.h  R3BNeutronCalibr2D.cxx  R3BNeutronCalibr2D.h  R3BNeutronTracker.cxx  R3BNeutronTracker.h  (+10 more)
mcstack/: CMakeLists.txt  FairDetectorList.h  FairMCTrack.cxx  FairMCTrack.h  FairStack.cxx  FairStack.h
mwpc/: CMakeLists.txt  MwpcLinkDef.h
neuland/: .clang-tidy  .cmake-format  CMakeLists.txt  NeulandLinkDef.h  R3BNeuland.cxx  R3BNeuland.h  R3BNeulandClusterFinder.cxx  R3BNeulandClusterFinder.h  R3BNeulandClusterMon.cxx  R3BNeulandClusterMon.h  R3BNeulandContFact.cxx  R3BNeulandContFact.h  R3BNeulandDigiMon.cxx  R3BNeulandDigiMon.h  R3BNeulandDigitizer.cxx  R3BNeulandDigitizer.h  R3BNeulandGeoPar.cxx  R3BNeulandGeoPar.h  R3BNeulandMCMon.cxx  R3BNeulandMCMon.h  R3BNeulandNeutron2DPar.cxx  R3BNeulandNeutron2DPar.h  R3BNeulandNeutronReconstruction.cxx  R3BNeulandNeutronReconstruction.h  R3BNeulandNeutronReconstructionEvaluation.cxx  R3BNeulandNeutronReconstructionEvaluation.h  R3BNeulandVisualizer.cxx  R3BNeulandVisualizer.h  readme.md
passive/: CMakeLists.txt  PassiveLinkDef.h  R3BAladinMagnet.cxx  R3BAladinMagnet.h  R3BCave.cxx  R3BCave.h  R3BCollimator.cxx  R3BCollimator.h  R3BGeoCave.cxx  R3BGeoCave.h  R3BGeoGDML.cxx  R3BGeoGDML.h  R3BGeoMagnet.cxx  R3BGeoMagnet.h  R3BGeoPassivePar.cxx  R3BGeoPassivePar.h  R3BGeoPipe.cxx  R3BGeoPipe.h  R3BGeoTarget.cxx  R3BGeoTarget.h  R3BGeoVacVesselCool.cxx  R3BGeoVacVesselCool.h  R3BGladMagnet.cxx  R3BGladMagnet.h  R3BMagnet.cxx  R3BMagnet.h  R3BNeutronWindowAndSomeAir.cxx  R3BNeutronWindowAndSomeAir.h  R3BPassiveContFact.cxx  R3BPassiveContFact.h  R3BPipe.cxx  R3BPipe.h  R3BTarget.cxx  R3BTarget.h  R3BVacVesselCool.cxx  R3BVacVesselCool.h
plists/: CMakeLists.txt  EmBinaryCascadeBuilder.cxx  EmBinaryCascadeBuilder.h  EmGammaNucleusBuilder.cxx  EmHadronElasticBuilder.cxx  EmIonBinaryCascadeBuilder.cxx  G4EmHadronBuilder.cxx  G4EmHadronBuilder.h  G4EmMuonBuilder.cxx  G4EmMuonBuilder.h  G4EmQEDBuilder.cxx  G4EmQEDBuilder.h  G4LowEnergyQEDBuilder.cxx  G4LowEnergyQEDBuilder.h  G4PenelopeQEDBuilder.cxx  G4PenelopeQEDBuilder.h  G4StepLimiterBuilder.cxx  G4StepLimiterBuilder.h  G4StepLimiterMessenger.cxx  G4StepLimiterMessenger.h  G4StepLimiterPerRegion.cxx  G4StepLimiterPerRegion.h  PlistLinkDef.h  R3BDecaysBuilder.cxx  R3BDecaysBuilder.h  (+8 more)
(+5473 files in other folders)
